comment content and post content overflow fixed

--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -30,3 +30,14 @@
 .note-editor.note-frame {
   border-color: #2f855a;
 }
+
+.note-editor {
+  width: 45rem;
+  margin: auto;
+}
+
+@media screen and (max-width: 900px) {
+  .note-editor {
+    width: 90%;
+  }
+}
